; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_mv_udc_core.c_udc_stop.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_mv_udc_core.c_udc_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mv_udc = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@USBINTR_INT_EN = common dso_local global i32 0, align 4
@USBINTR_ERR_INT_EN = common dso_local global i32 0, align 4
@USBINTR_PORT_CHANGE_DETECT_EN = common dso_local global i32 0, align 4
@USBINTR_RESET_EN = common dso_local global i32 0, align 4
@USBCMD_RUN_STOP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mv_udc*)* @udc_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @udc_stop(%struct.mv_udc* %0) #0 {
  %2 = alloca %struct.mv_udc*, align 8
  %3 = alloca i32, align 4
  store %struct.mv_udc* %0, %struct.mv_udc** %2, align 8
  %4 = load %struct.mv_udc*, %struct.mv_udc** %2, align 8
  %5 = getelementptr inbounds %struct.mv_udc, %struct.mv_udc* %4, i32 0, i32 1
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 1
  %8 = call i32 @readl(i32* %7)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* @USBINTR_INT_EN, align 4
  %10 = load i32, i32* @USBINTR_ERR_INT_EN, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @USBINTR_PORT_CHANGE_DETECT_EN, align 4
  %13 = or i32 %11, %12
  %14 = load i32, i32* @USBINTR_RESET_EN, align 4
  %15 = or i32 %13, %14
  %16 = xor i32 %15, -1
  %17 = load i32, i32* %3, align 4
  %18 = and i32 %17, %16
  store i32 %18, i32* %3, align 4
  %19 = load i32, i32* %3, align 4
  %20 = load %struct.mv_udc*, %struct.mv_udc** %2, align 8
  %21 = getelementptr inbounds %struct.mv_udc, %struct.mv_udc* %20, i32 0, i32 1
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 1
  %24 = call i32 @writel(i32 %19, i32* %23)
  %25 = load %struct.mv_udc*, %struct.mv_udc** %2, align 8
  %26 = getelementptr inbounds %struct.mv_udc, %struct.mv_udc* %25, i32 0, i32 0
  store i32 1, i32* %26, align 8
  %27 = load %struct.mv_udc*, %struct.mv_udc** %2, align 8
  %28 = getelementptr inbounds %struct.mv_udc, %struct.mv_udc* %27, i32 0, i32 1
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = call i32 @readl(i32* %30)
  store i32 %31, i32* %3, align 4
  %32 = load i32, i32* @USBCMD_RUN_STOP, align 4
  %33 = xor i32 %32, -1
  %34 = load i32, i32* %3, align 4
  %35 = and i32 %34, %33
  store i32 %35, i32* %3, align 4
  %36 = load i32, i32* %3, align 4
  %37 = load %struct.mv_udc*, %struct.mv_udc** %2, align 8
  %38 = getelementptr inbounds %struct.mv_udc, %struct.mv_udc* %37, i32 0, i32 1
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = call i32 @writel(i32 %36, i32* %40)
  ret void
}

declare dso_local i32 @readl(i32*) #1

declare dso_local i32 @writel(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
